Modified header name in index.html

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class = "container">
         <header class = "header">
-            <h4 class = "title">Number of Population Search</h4>
+            <h4 class = "title">Population Number Search</h4>
             <h4 class = "title">(using REST Countries API)</h4>
             <small class = "subtitle">Find each country's population information</small>
             <input type="text" id = "input" placeholder="Search country here...">
